cv-23: fixed uncorrect property in align text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h1 {
 }
 
 .text {
-  line-height: 20px;
+   margin-bottom: 5px;
 }
 /*in container list*/
 
